--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2163,6 +2163,16 @@
   timestamp = {2012.02.13},
 }
 
+@Book{Bal1977,
+  title     = {Narratologie: Essais sur la signification narrative dans quatre romans modernes},
+  publisher = {Klincksieck},
+  year      = {1977},
+  author    = {Bal, M.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://books.google.fr/books/about/Narratologie.html?id=UWZcAAAAMAAJ},
+}
+
 @Book{Bal2009,
   title     = {Narratology: Introduction to the Theory of Narrative},
   publisher = {University of Toronto Press},
@@ -7925,6 +7935,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp    = {2016.06.03},
 }
 
+@Book{Culler1983,
+  title     = {On Deconstruction: Theory and Criticism after Structuralism},
+  publisher = {Routledge},
+  year      = {1983},
+  author    = {Culler, J.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.jstor.org/stable/10.7591/j.ctt1ffjph5},
+}
+
 @InProceedings{Culotta2004,
   author    = {Culotta, A. and Sorensen, J.},
   title     = {Dependency tree kernels for relation extraction},
@@ -11103,6 +11123,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.03.22},
   url       = {https://mitpress.mit.edu/books/wordnet},
+}
+
+@Article{Felski2009,
+  author    = {Felski, R.},
+  title     = {After suspicion},
+  journal   = {Profession},
+  year      = {2009},
+  volume    = {28-35},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.jstor.org/stable/25595909},
 }
 
 @InProceedings{Felzenszwalb2008,
@@ -16615,6 +16646,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://users.cs.fiu.edu/~markaf/doc/w20.jahan.2019.procwnu_preprint.pdf},
 }
 
+@Article{Jahn1996,
+  author    = {Jahn, M.},
+  title     = {Windows of focalization: Deconstructing and reconstructing a narratological concept},
+  journal   = {Style},
+  year      = {1996},
+  volume    = {30},
+  number    = {2},
+  pages     = {241-267},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.jstor.org/stable/45063726},
+}
+
 @Article{Jahn2001,
   author    = {Jahn, M.},
   title     = {Narrative Voice and Agency in Drama: Aspects of a Narratology of Drama},
@@ -17647,6 +17691,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pure.knaw.nl/ws/files/481270/karsdorp_et_al2012b.pdf},
 }
 
+@InProceedings{Karsdorp2015,
+  author    = {Karsdorp, F. and Kestemont, M. and Schöch, C. and van den Bosch, A.},
+  title     = {The love equation: Computational modeling of romantic relationships in french classical drama},
+  booktitle = {6th International Workshop on Computational Models of Narrative},
+  year      = {2015},
+  pages     = {98-107},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://drops.dagstuhl.de/opus/volltexte/2015/5283/pdf/12.pdf},
+}
+
+@InProceedings{Karsdorp2015a,
+  author    = {Karsdorp, F. and van der Meulen, M. and Meder, T. and van den Bosch, A.},
+  title     = {Animacy detection in stories},
+  booktitle = {6th Workshop on Computational Models of Narrative},
+  year      = {2015},
+  pages     = {83-97},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://drops.dagstuhl.de/opus/volltexte/2015/5284/pdf/13.pdf},
+}
+
 @Article{Kastan1985,
   author    = {Kastan, D. S.},
   title     = {All's Well That Ends Well and the Limits of Comedy},
@@ -18628,6 +18694,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.jmp.2013.11.002},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@PhdThesis{Koolen2018,
+  author    = {Koolen, C.},
+  title     = {Reading Beyond the Female: The Relationship Between Perception of Author Gender and Literary Quality},
+  school    = {Institute for Logic, Language and Computation},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://hdl.handle.net/11245.1/cb936704-8215-4f47-9013-0d43d37f1ce7},
 }
 
 @Article{Koprinska2001,
@@ -22711,6 +22787,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.12.31},
 }
 
+@Article{Mann1988,
+  author    = {Mann, W. C. and Thompson, S. A.},
+  title     = {Rhetorical Structure Theory: Toward a functional theory of text organization},
+  journal   = {Text - Interdisciplinary Journal for the Study of Discourse},
+  year      = {1988},
+  volume    = {8},
+  number    = {3},
+  doi       = {10.1515/text.1.1988.8.3.243},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Book{Manning1999,
   title     = {Foundations of Statistical Natural Language Processing},
   publisher = {MIT Press},
@@ -25661,6 +25749,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://aclweb.org/anthology/E06-1021},
+}
+
+@Article{Nelles1990,
+  author    = {Nelles, W.},
+  title     = {Getting Focalization into Focus},
+  journal   = {Poetics Today},
+  year      = {1990},
+  volume    = {11},
+  number    = {2},
+  pages     = {365},
+  doi       = {10.2307/1772622},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @TechReport{Neti2000,
@@ -29568,6 +29669,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://www.bloomsbury.com/uk/shakespeares-theatre-9781847146113/},
+}
+
+@Book{Ricoeur1979,
+  title     = {Freud and Philosophy: An Essay on Interpretation},
+  publisher = {Yale University Press},
+  year      = {1979},
+  author    = {Ricoeur, P.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://yalebooks.yale.edu/book/9780300021899/freud-and-philosophy},
 }
 
 @Article{Ricoeur1980,
