--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2514,6 +2514,17 @@
   url       = {http://barabasi.com/networksciencebook/},
 }
 
+@TechReport{Barabasi2018,
+  author      = {Barabási, Albert-László},
+  title       = {Love is All You Need: Clauset's fruitless search for scale-free networks},
+  institution = {Center for Complex Network Research},
+  year        = {2018},
+  groups      = {Scale Free - Power Law},
+  owner       = {Vincent},
+  timestamp   = {2021.06.24},
+  url         = {https://www.barabasilab.com/post/love-is-all-you-need},
+}
+
 @Article{Baronchelli2013,
   author    = {Baronchelli, A. and Ferrer-i-Cancho, R. and Pastor-Satorras, R. and Chater, N. and Christiansen, M. H.},
   title     = {Networks in Cognitive Science},
