--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -29284,6 +29284,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://nlp.lsi.upc.edu/publications/papers/sew2009.pdf},
 }
 
+@InProceedings{Recchia2014,
+  author    = {Recchia, G. a,d Slater, A. L. and Louwerse, M. M.},
+  title     = {Predicting the good guy and the bad guy: Attitudes are encoded in language statistics},
+  booktitle = {36th Annual Conference of the Cognitive Science Society},
+  year      = {2014},
+  pages     = {1264-1269},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://escholarship.org/uc/item/93z910gg},
+}
+
 @Article{Reda2011,
   author    = {Reda, K. and Tantipathananandh, C. and Johnson, A. and Leigh, J. and Berger-Wolf, T.},
   title     = {Visualizing the Evolution of Community Structures in Dynamic Social Networks},
@@ -31600,6 +31611,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/27784811},
 }
 
+@Book{Schreibman2008,
+  title     = {A Companion to Digital Literary Studies},
+  publisher = {Blackwell},
+  year      = {2008},
+  author    = {Schreibman, S. and Siemens, R.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {http://www.digitalhumanities.org/companionDLS/},
+}
+
 @InProceedings{Schroff2015,
   author    = {Schroff, F. and Kalenichenko, D. and Philbin, J.},
   title     = {FaceNet: A unified embedding for face recognition and clustering},
@@ -31706,6 +31727,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.28},
   url       = {https://uk.sagepub.com/en-gb/eur/social-network-analysis/book249668},
+}
+
+@InProceedings{Sculley2009,
+  author    = {Sculley, D.},
+  title     = {Large scale learning to rank},
+  booktitle = {NIPS Workshop on Advances in Ranking},
+  year      = {2009},
+  pages     = {58-63},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://static.googleusercontent.com/media/research.google.com/fr//pubs/archive/35662.pdf},
 }
 
 @Article{Sealey2009,
@@ -35360,6 +35392,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Book{Ubersfeld1999,
+  title     = {Reading Theatre},
+  publisher = {University of Toronto Press},
+  year      = {1999},
+  author    = {Ubersfeld, A. and Collins, F. and Perron, P. and Debbèche, P.},
+  series    = {Toronto Studies in Semiotics and Communication Series},
+  doi       = {10.3138/9781442679023},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InProceedings{Ueno2016,
   author    = {Ueno, M. and Mori, N. and Suenaga, T. and Isahara, H.},
   title     = {Estimation of structure of four-scene comics by convolutional neural networks},
@@ -36081,6 +36124,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s12198-012-0092-9},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Voorhees1999,
+  author    = {Voorhees, E. M. and Tice, D. M.},
+  title     = {The TREC-8 question answering track evaluation},
+  booktitle = {8th Text REtrieval Conference},
+  year      = {1999},
+  pages     = {26},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.aclweb.org/anthology/L00-1018/},
 }
 
 @Article{Vosoughi2018,
