--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -13958,6 +13958,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewPaper/2791},
 }
 
+@InProceedings{Grohe2020,
+  author    = {Grohe, M.},
+  title     = {word2vec, node2vec, graph2vec, X2vec: Towards a Theory of Vector Embeddings of Structured Data},
+  booktitle = {39th ACM SIGMOD-SIGACT-SIGAI Symposium on Principles of Database Systems},
+  year      = {2020},
+  pages     = {1-16},
+  doi       = {10.1145/3375395.3387641},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
+}
+
 @Article{Gross2010,
   author    = {Gross, R. and Matthews, I. and Cohn, J. and Kanade, T. and Baker, S.},
   title     = {Multi-{PIE}},
@@ -14695,6 +14706,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1007/3-540-44541-2_18},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Harper2016,
+  author    = {Harper, F. M. and Konstan, J. A.},
+  title     = {The {MovieLens} Datasets: History and Context},
+  journal   = {ACM Transactions on Interactive Intelligent Systems},
+  year      = {2016},
+  volume    = {5},
+  number    = {4},
+  pages     = {19},
+  doi       = {10.1145/2827872},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
 }
 
 @Book{Harrington2009,
@@ -17710,7 +17734,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {98-107},
   owner     = {Vincent},
   timestamp = {2021.06.24},
-  url       = {https://drops.dagstuhl.de/opus/volltexte/2015/5283/pdf/12.pdf},
+  url       = {https://drops.dagstuhl.de/opus/volltexte/2015/5283/},
 }
 
 @InProceedings{Karsdorp2015a,
@@ -17718,10 +17742,12 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Animacy detection in stories},
   booktitle = {6th Workshop on Computational Models of Narrative},
   year      = {2015},
+  volume    = {45},
+  series    = {OpenAccess Series in Informatics},
   pages     = {83-97},
   owner     = {Vincent},
   timestamp = {2021.06.24},
-  url       = {https://drops.dagstuhl.de/opus/volltexte/2015/5284/pdf/13.pdf},
+  url       = {https://drops.dagstuhl.de/opus/volltexte/2015/5284/},
 }
 
 @Article{Kastan1985,
@@ -18730,6 +18756,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Koren2009,
+  author    = {Koren, Y. and Bell, R. and Volinsky, C.},
+  title     = {Matrix Factorization Techniques for Recommender Systems},
+  journal   = {Computer},
+  year      = {2009},
+  volume    = {42},
+  number    = {8},
+  pages     = {30-37},
+  doi       = {10.1109/mc.2009.263},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
+}
+
 @Article{Korfmann2004,
   author    = {Korfmann, M. and Latacz, J. and Hawkins, J. D.},
   title     = {Was There a Trojan War?},
@@ -18857,6 +18896,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.sigpro.2007.11.017},
   owner     = {Vincent},
   timestamp = {2018.07.09},
+}
+
+@InCollection{Kounelis2021,
+  author    = {Kounelis, A. and Vikatos, P. and Makris, C.},
+  title     = {Movie Recommendation System Based on Character Graph Embeddings},
+  booktitle = {IFIP International Conference on Artificial Intelligence Applications and Innovations},
+  publisher = {Springer},
+  year      = {2021},
+  volume    = {628},
+  series    = {IFIP Advances in Information and Communication Technology},
+  pages     = {418-430},
+  doi       = {10.1007/978-3-030-79157-5_34},
+  owner     = {Vincent},
+  timestamp = {2021.06.28},
 }
 
 @Article{Kovacs2019,
@@ -19202,7 +19255,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Kubis2021,
-  author    = {Kubis, M.},
+  author    = {Kubis, M. and Mickiewicz, A.},
   title     = {Quantitative analysis of character networks in Polish 19th- and 20th-century novels},
   journal   = {Digital Scholarship in the Humanities},
   year      = {2021},
@@ -24965,6 +25018,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.sup.org/books/title/?id=2935},
 }
 
+@Article{Morsy2019,
+  author    = {Morsy, S. and Karypis, G.},
+  title     = {Will this Course Increase or Decrease Your GPA? Towards Grade-aware Course Recommendation},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.IR},
+  pages     = {1904.11798},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
+  url       = {https://arxiv.org/abs/1904.11798},
+}
+
 @InProceedings{Mortensen2013,
   author    = {Mortensen, J. and Musen, M. A. and Noy, N. F.},
   title     = {Crowdsourcing the verification of relationships in biomedical ontologies},
@@ -25392,6 +25457,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.patcog.2008.05.026},
   owner     = {Vincent},
   timestamp = {2020.12.12},
+}
+
+@InCollection{Musto2016,
+  author    = {Musto, C. and Semeraro, G. and de Gemmis, M. and Lops, P.},
+  title     = {Learning Word Embeddings from Wikipedia for Content-Based Recommender Systems},
+  booktitle = {European Conference on Information Retrieval},
+  publisher = {Springer},
+  year      = {2016},
+  volume    = {9626},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {729-734},
+  doi       = {10.1007/978-3-319-30671-1_60},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
 }
 
 @InProceedings{Mutton2002,
@@ -26076,6 +26155,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2010.10.05},
   url       = {https://global.oup.com/academic/product/networks-9780199206650?cc=fr&lang=en&},
+}
+
+@Article{NezValdz2012,
+  author    = {Núñez-Valdéz, E. R. and Cueva Lovelle, J. M. and Sanjuán Martínez, O. and García-Díaz, V. and Ordoñez de Pablos, P. and Montenegro Marín, C. E.},
+  title     = {Implicit feedback techniques on recommender systems applied to electronic books},
+  journal   = {Computers in Human Behavior},
+  year      = {2012},
+  volume    = {28},
+  number    = {4},
+  pages     = {1186-1193},
+  doi       = {10.1016/j.chb.2012.02.001},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
 }
 
 @InCollection{Ng2002,
@@ -26880,6 +26972,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.86.036104},
   owner     = {Vincent},
   timestamp = {2011.01.12},
+}
+
+@InProceedings{Oord2013,
+  author    = {van den Oord, A. and Dieleman, S. and Schrauwen, B.},
+  title     = {Deep content-based music recommendation},
+  booktitle = {26th International Conference on Neural Information Processing Systems},
+  year      = {2013},
+  pages     = {2643-2651},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
+  url       = {https://papers.nips.cc/paper/2013/hash/b3ba8f1bee1238a2f37603d90b58898d-Abstract.html},
 }
 
 @Article{Opsahl2010,
@@ -30548,6 +30651,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.03},
 }
 
+@InProceedings{Rozemberczki2020,
+  author    = {Rozemberczki, B. and Kiss, O. and Sarkar, R.},
+  title     = {Karate Club: An API Oriented Open-Source Python Framework for Unsupervised Learning on Graphs},
+  booktitle = {29th ACM International Conference on Information \& Knowledge Management},
+  year      = {2020},
+  pages     = {3125-3132},
+  doi       = {10.1145/3340531.3412757},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
+}
+
 @Article{Rozenfeld2005,
   author    = {Rozenfeld, H. D. and Kirk, J. E. and Bollt, E. M. and Ben-Avraham, D.},
   title     = {Statistics of cycles: how loopy is your network?},
@@ -33628,6 +33742,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2012.09.19},
 }
 
+@Article{Su2009,
+  author    = {Su, X. and Khoshgoftaar, T. M.},
+  title     = {A Survey of Collaborative Filtering Techniques},
+  journal   = {Advances in Artificial Intelligence},
+  year      = {2009},
+  volume    = {2009},
+  pages     = {421425},
+  doi       = {10.1155/2009/421425},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
+}
+
 @Article{Subelj2012a,
   author    = {Šubelj, L. and Bajec, M.},
   title     = {Clustering assortativity, communities and functional modules in real-world networks},
@@ -33720,6 +33846,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.22},
   url       = {http://www.jmlr.org/papers/v8/sugiyama07b.html},
+}
+
+@InProceedings{Suglia2017,
+  author    = {Suglia, A. and Greco, C. and Musto, C. and de Gemmis, M. and Lops, P. and Semeraro, G.},
+  title     = {A Deep Architecture for Content-based Recommendations Exploiting Recurrent Neural Networks},
+  booktitle = {25th Conference on User Modeling, Adaptation and Personalization},
+  year      = {2017},
+  pages     = {202-211},
+  doi       = {10.1145/3079628.3079684},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
 }
 
 @Article{Sukthanker2018,
@@ -36454,6 +36591,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icdm.2011.59},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@InProceedings{Wang2013,
+  author    = {Wang, Y. and Wang, L. and Li, Y. and He, D. and Liu, T.-Y.},
+  title     = {A Theoretical Analysis of NDCG Type Ranking Measures},
+  booktitle = {26th Annual Conference on Learning Theory},
+  year      = {2013},
+  volume    = {30},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {25-54},
+  owner     = {Vincent},
+  timestamp = {2021.07.02},
+  url       = {http://proceedings.mlr.press/v30/Wang13.html},
 }
 
 @InProceedings{Wang2014,
