--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3984,6 +3984,17 @@
   timestamp = {2015.11.19},
 }
 
+@Book{Bollobas1985,
+  title     = {Random graphs},
+  publisher = {Academic Press},
+  year      = {1985},
+  author    = {Bollobás, B.},
+  series    = {London Mathematical Society Monographs},
+  doi       = {10.1017/CBO9780511814068},
+  owner     = {Vincent},
+  timestamp = {2012.09.30},
+}
+
 @Book{Boltanski1991,
   title     = {De la justification : les économies de la grandeur},
   publisher = {Gallimard},
@@ -5736,6 +5747,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/s0004-3702(02)00230-8},
   owner     = {Vincent},
   timestamp = {2020.03.16},
+}
+
+@Article{Callon1983,
+  author    = {Callon, M. and Courtial, J.-P. and Turner, W. A. and Bauin, S.},
+  title     = {From translations to problematic networks: An introduction to co-word analysis},
+  journal   = {Social Science Information},
+  year      = {1983},
+  volume    = {22},
+  number    = {2},
+  pages     = {191-235},
+  doi       = {10.1177/053901883022002003},
+  owner     = {Vincent},
+  timestamp = {2021.07.24},
 }
 
 @Article{CamachoCollados2018,
@@ -8779,6 +8803,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.08.14},
 }
 
+@PhdThesis{Demmerle2021,
+  author      = {Demmerle, S. J.},
+  title       = {Character at the Margins: Formulating Minor Characters in Shakespeare},
+  year        = {2021},
+  type        = {PhD Thesis},
+  institution = {Indiana University},
+  owner       = {Vincent},
+  timestamp   = {2021.07.08},
+  url         = {https://www.proquest.com/openview/e63aee681fc4260b7dbc55a118978676/1y},
+}
+
 @Article{Dempster1977,
   author    = {Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
   title     = {Maximum Likelihood from Incomplete Data Via the {EM} Algorithm},
@@ -10920,6 +10955,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.04.06},
 }
 
+@Article{Fan2021c,
+  author    = {Fan, C. and Yang, Z. and Yuan, Y.},
+  title     = {Cluster Analysis and Visualization for the Legend of the Condor Heroes Based on Social Network},
+  journal   = {Scientific Programming},
+  year      = {2021},
+  volume    = {2021},
+  pages     = {9439583},
+  doi       = {10.1155/2021/9439583},
+  owner     = {Vincent},
+  timestamp = {2021.07.12},
+}
+
 @InProceedings{Fang2006,
   author    = {Fang, S. and Lwin, M. and Ebright, P.},
   title     = {Visualization of unstructured text sequences of nursing narratives},
@@ -12445,6 +12492,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {https://press.princeton.edu/titles/10537.html},
+}
+
+@Article{Gan2019,
+  author    = {Gan, J. and Cai, Q. and Galer, P. and Ma, D. and Chen, X. and Huang, J. and Bao, S. and Luo, R.},
+  title     = {Mapping the knowledge structure and trends of epilepsy genetics over the past decade},
+  journal   = {Medicine},
+  year      = {2019},
+  volume    = {98},
+  number    = {32},
+  pages     = {e16782},
+  doi       = {10.1097/md.0000000000016782},
+  owner     = {Vincent},
+  timestamp = {2021.07.24},
 }
 
 @InProceedings{Ganesh2016,
@@ -14914,6 +14974,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books/about/Renaissance.html?id=T9L8SEsrM70C},
+}
+
+@Article{He1999,
+  author    = {He, Q.},
+  title     = {Knowledge discovery through co-word analysis},
+  journal   = {Library Trends},
+  year      = {1999},
+  volume    = {48},
+  number    = {1},
+  pages     = {133-159},
+  owner     = {Vincent},
+  timestamp = {2021.07.24},
+  url       = {https://www.ideals.illinois.edu/bitstream/handle/2142/8267/?sequence=1},
 }
 
 @InProceedings{He2003,
@@ -17992,6 +18065,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/976909.979622},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@Article{Khaldi2021,
+  author    = {Khaldi, H. and Prado-Gascó, V.},
+  title     = {Bibliometric maps and co-word analysis of the literature on international cooperation on migration},
+  journal   = {Quality \& Quantity},
+  year      = {2021},
+  doi       = {10.1007/s11135-020-01085-4},
+  owner     = {Vincent},
+  timestamp = {2021.07.24},
 }
 
 @Article{Khan2016,
@@ -25626,6 +25709,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ICPR.2016.7899895},
   owner     = {Vincent},
   timestamp = {2019.06.27},
+}
+
+@Article{Nair2018,
+  author    = {Nair B. J., B. and Sarath, M. S.},
+  title     = {Evolutionary clustering annotation of ortho-paralogous gene in a multi species using Venn diagram visualization},
+  journal   = {International Journal of Engineering \& Technology},
+  year      = {2018},
+  volume    = {7},
+  number    = {1.9},
+  pages     = {162},
+  doi       = {10.14419/ijet.v7i1.9.9755},
+  owner     = {Vincent},
+  timestamp = {2021.07.24},
 }
 
 @Article{Naldi2003,
